<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/sort_by_billing_period">
            <menu>
                <item
                    android:id="@+id/menu_short_to_long"
                    android:title="@string/short_to_long" />
                <item
                    android:id="@+id/menu_long_to_short"
                    android:title="@string/long_to_short" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />

</menu>