<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.add.AddFragment">

    <TextView
        android:id="@+id/add_title_tv"
        android:fontFamily="@font/inter_regular"
        android:textColor="#060048"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_subscription"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_name_tv"
        android:fontFamily="@font/inter_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textColor="#002148"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_title_tv" />

    <EditText
        android:id="@+id/name_et"
        android:fontFamily="@font/inter_regular"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/name_placeholder"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_name_tv" />

    <TextView
        android:id="@+id/label_amount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/amount"
        android:textColor="#002148"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_et" />

    <EditText
        android:id="@+id/amount_et"
        android:fontFamily="@font/inter_regular"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:maxLength="12"
        android:hint="@string/amount_placeholder"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_amount_tv" />

    <TextView
        android:id="@+id/label_billing_period_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/billing_period"
        android:textColor="#002148"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_et" />

    <Spinner
        android:id="@+id/billing_period_spinner"
        android:fontFamily="@font/inter_regular"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:entries="@array/billing_period"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_billing_period_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="14dp"
        android:background="@drawable/add_button_background"
        android:drawableStart="@drawable/ic_add"
        android:drawableTint="@color/white"
        android:drawablePadding="8dp"
        android:fontFamily="@font/inter_medium"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_marginTop="26dp"
        android:text="@string/add_subscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billing_period_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>