<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mSharedViewModel"
            type="com.boonsuen.recurr.fragments.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listLayout"
        tools:context=".fragments.list.ListFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/expenseOverviewLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/expense_overview_background"
                    android:elevation="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:hideExpenseOverview="@{mSharedViewModel.emptyDatabase}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:context=".MainActivity">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:textColor="#E2D4FF"
                        android:textSize="16sp"
                        android:gravity="center_horizontal"
                        android:paddingTop="16dp"
                        android:paddingBottom="4dp"
                        android:text="@string/expenses_overview" />

                    <com.robinhood.ticker.TickerView
                        android:id="@+id/tvAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        tools:text="$1639.82" />

                    <RadioGroup
                        android:id="@+id/radioGroupSelection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingLeft="16dp"
                        android:paddingBottom="16dp"
                        android:clipToPadding="false">

                        <RadioButton
                        android:id="@+id/radioButtonWeekly"
                        style="@style/CustomRadioButton"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:layout_marginHorizontal="4dp"
                        android:text="@string/weekly" />

                        <RadioButton
                            android:id="@+id/radioButtonMonthly"
                            style="@style/CustomRadioButton"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:elevation="4dp"
                            android:gravity="center"
                            android:layout_marginHorizontal="4dp"
                            android:text="@string/monthly" />

                        <RadioButton
                            android:id="@+id/radioButtonYearly"
                            style="@style/CustomRadioButton"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:elevation="4dp"
                            android:gravity="center"
                            android:layout_marginHorizontal="4dp"
                            android:text="@string/yearly" />
                    </RadioGroup>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="false"
                    android:padding="8dp"
                    android:layout_marginBottom="90dp"
                    android:clipToPadding="false" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:navigateToAddFragment="@{true}"
            app:tint="@color/white"
            app:backgroundTint="#6691FF"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/add_new_subscription" />

        <ImageView
            android:id="@+id/no_data_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_no_data"
            android:visibility="invisible"
            android:emptyDatabase="@{mSharedViewModel.emptyDatabase}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37"
            android:contentDescription="@string/no_data_imageView" />

        <TextView
            android:id="@+id/no_data_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/no_data"
            android:textSize="16sp"
            android:textColor="#6E6C84"
            android:visibility="invisible"
            android:emptyDatabase="@{mSharedViewModel.emptyDatabase}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_data_imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>